--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-06-07 16:12:50,144: INFO: config: PyTorch version 2.3.1 available.]\n"
+      "[2024-08-20 22:12:28,486: INFO: config: PyTorch version 2.3.1 available.]\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,17 +184,26 @@
     "        #     per_device_train_batch_size=self.config.per_device_train_batch_size, per_device_eval_batch_size=self.config.per_device_train_batch_size,\n",
     "        #     weight_decay=self.config.weight_decay, logging_steps=self.config.logging_steps,\n",
     "        #     evaluation_strategy=self.config.evaluation_strategy, eval_steps=self.config.eval_steps, save_steps=1e6,\n",
-    "        #     gradient_accumulation_steps=self.config.gradient_accumulation_steps\n",
+    "        #     gradient_accumulation_steps=self.config.gradient_accumulation_steps,\n",
+    "        #     fp= self.fp\n",
     "        # ) \n",
     "\n",
     "\n",
+    "        \n",
     "        trainer_args = TrainingArguments(\n",
-    "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
-    "            per_device_train_batch_size=1, per_device_eval_batch_size=1,\n",
-    "            weight_decay=0.01, logging_steps=10,\n",
-    "            evaluation_strategy='steps', eval_steps=500, save_steps=1e6,\n",
-    "            gradient_accumulation_steps=16\n",
-    "        ) \n",
+    "            output_dir=self.config.root_dir,\n",
+    "            num_train_epochs=1,\n",
+    "            warmup_steps=500,\n",
+    "            per_device_train_batch_size=1,\n",
+    "            per_device_eval_batch_size=1,\n",
+    "            weight_decay=0.01,\n",
+    "            logging_steps=50,\n",
+    "            evaluation_strategy='steps',\n",
+    "            eval_steps=1000,\n",
+    "            save_steps=1e6,\n",
+    "            gradient_accumulation_steps=4,  # Adjusted\n",
+    "            fp16=True  # Enable mixed precision training\n",
+    "        )\n",
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
     "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
@@ -211,44 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-06-07 16:13:51,544: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-06-07 16:13:51,551: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-06-07 16:13:51,556: INFO: common: created directory at: artifacts]\n",
-      "[2024-06-07 16:13:51,562: INFO: common: created directory at: artifacts/model_trainer]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "c:\\Users\\jatin\\anaconda3\\envs\\summarizer\\lib\\site-packages\\transformers\\training_args.py:1474: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "258c00087a3645078e54ac3216936dba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/51 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
@@ -258,13 +232,6 @@
     "except Exception as e:\n",
     "    raise e"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
